--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Revenue Through Relationships</h2>
   <p>As Sales & Partnerships Manager at AmeriCommerce, I owned the entire go-to-market motion, leading inbound and outbound sales while simultaneously building a partner ecosystem that reinforced our revenue strategy.</p>
   <p>I rebuilt our Salesforce instance from the ground up, introducing lead routing, pipeline visibility, and automated workflows that supported faster response times and higher conversion rates.</p>
-  <p>At the same time, I developed partnerships with companies like <strong>PayPal, Affirm, ShipStation, and TaxCloud</strong>, strengthening integrations, co-marketing, and monetized relationships. These partners not only increased product value — they also became a growing source of referral business.</p>
+  <p>At the same time, I developed partnerships with companies like <strong>Signifyd, Afterpay, Avalara, and Klarna</strong>, strengthening integrations, co-marketing, and monetized relationships. These partners not only increased product value — they also became a growing source of referral business.</p>
   <p>This dual engine of <strong>sales and partnerships</strong> helped us grow a niche platform into a highly competitive offering, and contributed directly to year-over-year revenue gains.</p>
 </section>
 
@@ -41,9 +41,18 @@
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Scaling at Cart.com</h2>
   <p>When AmeriCommerce was acquired by Cart.com, I joined as one of its earliest team members, stepping in as <strong>Sales Manager for the Storefront division</strong> while the company was still under 50 employees.</p>
   <p>Between 2021 and 2024, I was promoted twice, first to <strong>Senior Partner Manager</strong>, then to <strong>Director of Strategic Partnerships & Business Development</strong>, as Cart.com scaled to over 1,000 employees and raised significant funding.</p>
-  <p>I helped build the partnerships function from scratch, collaborating with legal, sales, and marketing to create frameworks that were repeatable and revenue-focused. We signed and scaled partner relationships with <strong>PayPal, Klaviyo, Coinbase, Attentive, and Avalara</strong> — building co-sell, co-market, and enablement plays that helped fuel our rapid customer acquisition. These partnerships became a meaningful driver of our pipeline and brand credibility as we grew.</p>
+  <p>I helped build the partnerships function from scratch, collaborating with legal, sales, and marketing to create frameworks that were repeatable and revenue-focused. We signed and scaled partner relationships with <strong>Discover, Klaviyo, Coinbase, Attentive, and ShipperHQ</strong> — building co-sell, co-market, and enablement plays that helped fuel our rapid customer acquisition. These partnerships became a meaningful driver of our pipeline and brand credibility as we grew.</p>
   <p>I was also one of the go-to leaders for onboarding and cross-team collaboration, helping train new hires, support exec alignment, and champion our core values as a founding member of the <strong>Culture Committee</strong>.</p>
   <p>By the end of my time, I was leading all partnerships and sales efforts for the eCommerce division, trusted not just to close deals, but to build the strategy around them.</p>
+</section>
+
+   <section class="chapter dark" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
+  <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">New Chapter, Same Drive</h2>
+  <p>After Cart.com, I wanted something different. Not another big rocketship, but a return to the earliest stages—the kind of environment where you're back in the trenches, building from scratch.</p>
+    <p>That’s what led me to ProperSKU.</p>
+    <p>I joined as Director of Partnerships, stepping into a founder-led company with a powerful vision and a product that could transform how 3PLs manage their operations. There were no legacy processes, no existing partner playbooks—just an opportunity to build something meaningful.</p>
+    <p>From day one, I've focused on identifying and onboarding logistics providers that could benefit from our unified product operations platform. But more than that, I focused on creating a framework for long-term partnership success: aligning product, sales, and implementation to create a seamless partner experience and a real revenue engine.</p>
+    <p>At ProperSKU, I’m not just signing partners—I’m building an ecosystem that scales with us.</p>
 </section>
   
 <section class="testimonials" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
@@ -94,9 +103,15 @@
     <p>"I don’t believe in siloed growth. I believe in scalable systems powered by people."</p>
   </section>
   <section class="contact" id="contact" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
-  <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">Let’s Talk About Building Together</h2>
-  <p>I’m currently exploring my next role — whether that’s with a team scaling fast or an established organization looking to evolve its go-to-market strategy. If you’re looking for someone who’s built sales and partnership systems from scratch, led through growth and transition, and believes that execution and culture go hand in hand — let’s connect.</p>
-  <p>Use the form below or email me directly @ <a href="mailto:Jeffcampbelljr@icloud.com">Jeffcampbelljr@icloud.com</a>. Let’s start a conversation.</p>
+  <h2 style="font-size: 2.5rem; margin-bottom: 1rem; color: red;">🚀 Growth Isn’t Given. It’s Built.</h2>
+<p>
+      I’m always open to conversations that align with my passion for partnerships, growth, and building scalable systems. 
+      If you’re a founder, operator, or leader looking to connect around strategy, go-to-market alignment, or building a 
+      partner ecosystem that actually drives revenue — let’s talk.
+    </p>
+    <p>
+      <strong>Because great things happen when builders get in the same room.</strong>  
+    <p>Use the form below or email me directly @ <a href="mailto:Jeffcampbelljr@icloud.com">Jeffcampbelljr@icloud.com</a>.</p>
   <form action="https://formspree.io/f/movelald" method="POST">
     <input type="text" name="name" placeholder="Your Name" required style="padding: 0.75rem; font-size: 1rem; width: 100%;" />
     <input type="email" name="email" placeholder="Your Email" required style="padding: 0.75rem; font-size: 1rem; width: 100%;" />
