--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jeffrey Campbell | Strategic Partnerships Leader</title>
+  <title>Jeff Campbell | Strategic Partnerships Leader</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 <body>
   <header class="hero" data-aos="fade-up">
-    <img src="images/jeff-photo.jpg" alt="Jeffrey Campbell" class="profile-pic" />
+    <img src="images/jeff-photo.jpg" alt="Jeff Campbell" class="profile-pic" />
     <h1>Jeffrey Campbell</h1>
     <p class="subtitle">Strategic Partnerships Leader | GTM Architect | Former Head of Sales & Partnerships, Cart.com</p>
     <a href="#contact" class="cta-button">Let’s Build Something Together</a>
