--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="hero" data-aos="fade-up">
     <img src="images/jeff-photo.jpg" alt="Jeff Campbell" class="profile-pic" />
-    <h1>Jeffrey Campbell</h1>
+    <h1>Jeff Campbell</h1>
     <p class="subtitle">Strategic Partnerships Leader | GTM Architect | Former Head of Sales & Partnerships, Cart.com</p>
     <a href="#contact" class="cta-button">Let’s Build Something Together</a>
     <a href="jeff-campbell-resume.pdf" class="cta-button" download>Download Resume</a>
